# github-actions-via-wlif

./: .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  _tf_plan.yml  clientLibraryConfig-github-actions.json  tf_plan_dev.yml
applications/src/: main.py  requirements.txt
terraform/dev/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
