[tool.poetry]
name = "github-actions"
version = "0.1.0"
description = ""
authors = ["y-tsuritani <ykt.tsuriya@gmail.com>"]
readme = "README.md"
packages = [{include = "github_actions"}]

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
